# three_weight

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pixi.toml
apps/: gui.cpp  sudoku.cpp
data/sudoku/: example_2x2.txt  example_4x4_hard.txt  example_4x4_medium.txt  example_5x5.txt
docs/: gui_help.md
include/twalib/graph/: factor_graph.hpp  factor_node.hpp  graph_edge.hpp  variable_node.hpp  weighted_value.hpp  weighted_value_exchange.hpp
include/twalib/minimizers/: in_range.hpp  known_value.hpp  one_hot.hpp  spy.hpp
include/twalib/problems/: circle_packing.hpp  compact_sudoku.hpp  sudoku.hpp
notes/: README.md
notes/concepts/: circle_packing.md  cpp_for_python_readers.md  factor_graphs.md  message_passing.md  sudoku.md  weights.md
notes/include/twalib/graph/: factor_graph.hpp.md  factor_node.hpp.md  graph_edge.hpp.md  variable_node.hpp.md  weighted_value.hpp.md  weighted_value_exchange.hpp.md
notes/include/twalib/minimizers/: in_range.hpp.md  known_value.hpp.md  one_hot.hpp.md  spy.hpp.md
notes/include/twalib/problems/: circle_packing.hpp.md  compact_sudoku.hpp.md  sudoku.hpp.md
notes/src/graph/: edge_data.hpp.md  factor_data.hpp.md  factor_graph.cpp.md  variable_data.hpp.md
notes/src/minimizers/: in_range.cpp.md  known_value.cpp.md  one_hot.cpp.md  spy.cpp.md
notes/src/problems/: circle_packing.cpp.md  compact_sudoku.cpp.md  sudoku.cpp.md
src/graph/: edge_data.hpp  factor_data.hpp  factor_graph.cpp  variable_data.hpp
src/minimizers/: in_range.cpp  known_value.cpp  one_hot.cpp  spy.cpp
src/problems/: circle_packing.cpp  compact_sudoku.cpp  sudoku.cpp
tests/: circle_packing_test.cpp  compact_sudoku_test.cpp  edge_data_test.cpp  factor_data_test.cpp  factor_graph_test.cpp  graph_types_test.cpp  minimizers_test.cpp  sudoku_test.cpp  variable_data_test.cpp
